<resources>
    <string name="app_name">remember_passw_phone</string>
    <string name="next">далее</string>
    <string name="reset_password">Восстановление пароля</string>
    <string name="info">На ваш номер телефона 099 005 32 89 мы отправили уведомление, с помощью которого вы сможете изменить пароль.</string>
    <string name="send">отправить</string>
    <string name="sms_code">временный код с sms:</string>
    <string name="new_password">новый пароль:</string>
    <string name="home">Домой</string>
    <string name="profile">Профиль</string>
    <string name="notifications">Уведомления</string>
    <string name="search">Поиск</string>
    <string name="enter">войти</string>
    <string name="change_email_address">изменить адрес электронной почты</string>
    <string name="email">e-mail</string>
    <string name="enter_password_begunok">введите Ваш пароль на Begunok</string>
    <string name="add_card">добавить карту</string>
    <string name="choose_card">выбрать карту</string>
    <string name="user_data">Имя и фамилия владельца карты</string>
    <string name="card_number">Номер кредитной карты</string>
    <string name="save">сохранить</string>
    <string name="month_year">месяц / год</string>
    <string name="cvc2">CVC2</string>
    <string name="from_card">как на карте</string>
    <string name="ivan_lukash">Ivan Lukash</string>
    <string name="card_number_placeholder">1234 5678 9101 1213</string>
    <string name="expiration_year_placeholder">02/19</string>
    <string name="cvc_placeholder">179</string>
    <string name="code_from_sms">Код с смс</string>
    <string name="sms_code_placeholder">ZR87UJ</string>
    <string name="no_sms">Не приходит смс?\nОтправить еще раз!</string>
    <string name="more">подробнее…</string>
    <string name="create">создать</string>
    <string name="completed_tasks">Выполненные задания</string>
    <string name="request_description">Описание заявки</string>
    <string name="delivery_address">Адрес выполнения</string>
    <string name="additional_description">Дополнительное описание</string>
    <string name="topic">Тема</string>
    <string name="date_and_time">Дата и время</string>
    <string name="price">Стоимость</string>
    <string name="loading">loading</string>
    <string name="period">Срок действия</string>
    <string name="month">месяц</string>
    <string name="year">год</string>
    <string name="cvc2_hint">179</string>
    <string name="about_registration">Данные поля для заполнения, если Вы хотите стать исполнителем. Данные поля НЕ требуют заполнения, если Вы регистрируетесь как заказчик, нажмите стрелку ДАЛЕЕ, в правом нижнем углу, чтобы завершить регистрацию.</string>
    <string name="documents_for_registration">Регистрационные документы: для ФЛП и юрлиц- вытяг из ЕДР, для физлиц- страница паспорта с последней актуальной фотографией, ФИО и страницей прописки Исполнителя.</string>
    <string name="avatar">Ваш аватар: для ФЛП и юр лиц- Ваш логотип, для физ лиц- актуальная фотография исполнителя.</string>
</resources>
