<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/bg_color"
        app:itemIconTint="@color/bottom_menu_background"
        app:labelVisibilityMode="unlabeled"
        app:menu="@menu/menu_bottom_navigation" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/tabs"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="24dp"
            android:paddingTop="32dp"
            android:paddingEnd="16dp"
            android:paddingBottom="16dp">

            <TextView
                style="@style/HeaderText"
                android:text="@string/request_description" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    style="@style/HeaderTextGray"
                    android:text="@string/topic" />

                <EditText
                    style="@style/EditTextStyle"
                    android:layout_marginStart="8dp"
                    tools:text="выгул собаки" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    style="@style/HeaderTextGray"
                    android:text="@string/date_and_time" />

                <EditText
                    style="@style/EditTextStyle"
                    android:layout_marginStart="8dp"
                    tools:text="21.03.20" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    style="@style/HeaderTextGray"
                    android:text="@string/price" />

                <EditText
                    style="@style/EditTextStyle"
                    android:layout_marginStart="8dp"
                    tools:text="180 грн" />

            </LinearLayout>

            <TextView
                style="@style/HeaderText"
                android:layout_marginTop="20dp"
                android:text="@string/delivery_address" />

            <EditText
                style="@style/EditTextStyle"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                tools:text="Харьков, ул, Соборная, 97" />

            <TextView
                style="@style/HeaderText"
                android:layout_marginTop="20dp"
                android:text="@string/additional_description" />

            <EditText
                style="@style/EditTextStyle"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                tools:text="Желательно опыт общения" />

        </LinearLayout>

    </ScrollView>
</RelativeLayout>