<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/bank_card_height"
    app:cardUseCompatPadding="true"
    app:contentPadding="16dp"
    app:cardCornerRadius="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card_number"
            android:textColor="@android:color/black" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@id/cardImagesContainer"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatSpinner
                    style="@style/SpinnerItemStyle"
                    android:layout_width="match_parent"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="8dp"
                    android:prompt="@string/card_number_placeholder"
                    android:spinnerMode="dialog" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/period"
                    android:textColor="@android:color/black" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="8dp"
                    android:baselineAligned="false"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <androidx.appcompat.widget.AppCompatSpinner
                            style="@style/SpinnerItemStyle"
                            android:layout_width="match_parent"
                            android:prompt="@string/card_number_placeholder"
                            android:spinnerMode="dialog" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:text="@string/month"
                            android:textColor="@android:color/black"
                            android:textSize="10sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <androidx.appcompat.widget.AppCompatSpinner
                            style="@style/SpinnerItemStyle"
                            android:layout_width="match_parent"
                            android:prompt="@string/card_number_placeholder"
                            android:spinnerMode="dialog" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:text="@string/year"
                            android:textColor="@android:color/black"
                            android:textSize="10sp" />
                    </LinearLayout>
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/user_data"
                    android:textColor="@android:color/black" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/cardImagesContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="56dp"
                    android:layout_height="32dp"
                    android:src="@drawable/ic_visa" />

                <ImageView
                    android:layout_width="56dp"
                    android:layout_height="32dp"
                    android:layout_marginTop="4dp"
                    android:src="@drawable/ic_mastercard" />
            </LinearLayout>
        </RelativeLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="4dp"
            android:background="@color/spinner_bg_color"
            android:hint="@string/ivan_lukash"
            android:paddingStart="8dp"
            android:gravity="center_vertical"
            android:paddingEnd="8dp"
            android:textSize="14sp"
            android:textColorHint="@color/hint_color" />
    </LinearLayout>

</androidx.cardview.widget.CardView>