<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@android:color/black"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        app:labelVisibilityMode="unlabeled"
        app:menu="@menu/menu_bottom_navigation" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/tabs"
        android:fillViewport="true"
        android:paddingStart="24dp"
        android:paddingTop="48dp"
        android:paddingEnd="24dp"
        tools:ignore="ContentDescription">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:drawableEnd="@android:drawable/ic_menu_close_clear_cancel"
                android:text="@string/reset_password"
                android:textColor="@color/orange"
                android:textSize="28sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="4dp"
                android:background="@color/orange" />

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/info"
                android:textColor="@android:color/white" />

            <TextView
                style="@style/HintLabelStyle"
                android:layout_marginTop="50dp"
                android:labelFor="@id/code"
                android:text="@string/sms_code" />

            <EditText
                android:id="@+id/code"
                style="@style/EditTextStyle"
                android:inputType="text" />

            <TextView
                style="@style/HintLabelStyle"
                android:layout_marginTop="30dp"
                android:labelFor="@id/password"
                android:text="@string/new_password" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password"
                    style="@style/EditTextStyle"
                    android:inputType="textPassword"
                    android:paddingEnd="60dp" />

                <ImageButton
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_gravity="center_vertical|end"
                    android:layout_marginEnd="12dp"
                    android:src="@mipmap/ic_launcher_round" />
            </FrameLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:background="@drawable/button_bg"
                android:padding="12dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:text="@string/send"
                android:textAllCaps="false" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>