<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_change_email"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/envelope"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="80dp"
            android:src="@drawable/envelope" />

        <LinearLayout
            android:id="@+id/underlineLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/envelope"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@drawable/drawable_underline" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/underlineLayout"
            android:layout_marginStart="16dp"
            android:layout_marginTop="96dp"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/change_email_address"
                android:textColor="@android:color/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:text="@string/email"
                android:textColor="@color/hint_color" />

            <EditText
                android:id="@+id/email"
                style="@style/EditTextStyle"
                android:layout_marginTop="6dp"
                android:inputType="textEmailAddress" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:text="@string/enter_password_begunok"
                android:textColor="@color/hint_color" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password"
                    style="@style/EditTextStyle"
                    android:inputType="textPassword"
                    android:layout_marginTop="6dp"
                    android:paddingEnd="60dp" />

                <ImageButton
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_gravity="center_vertical|end"
                    android:layout_marginEnd="12dp"
                    android:src="@mipmap/ic_launcher_round" />
            </FrameLayout>


            <Button
                style="@style/ButtonStyle"
                android:layout_marginTop="80dp"
                android:layout_marginBottom="20dp"
                android:text="@string/next" />

        </LinearLayout>

    </RelativeLayout>

</ScrollView>